# Challenge_Generator

./: Dockerfile
backend/: .gitignore  database.db  pyproject.toml  requirements.txt  server.py
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/auth/: AuthenticationPage.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
